--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -1,3 +1,5 @@
+@import "workspace.css";
+
 *{
     margin:0;
     padding:0;
@@ -21,13 +23,13 @@ html, body{
 }
 
 #header-container{
-
+    position: relative;
 }
 
 #workspace-container{
-
+    position: relative;
 }
 
 #footer-container{
-
+    position: relative;
 }
