--- a/webapp/html/components/galleryComponent.html
+++ b/webapp/html/components/galleryComponent.html
@@ -1,13 +1,14 @@
-<div class="ah_inner-gallery-components">
+<div class="ah_inner-gallery-components small-12 clearfix">
     <div class="ah_tree-gallery">
-        <div class="ah_tools-tree-gallery">
-
+        <div class="ah_tools-tree-gallery small-12">
+            <a href="javascript:void(0);">New folder</a>
+            <a href="javascript:void(0);">New picture</a>
         </div>
-        <div class="ah_inner-tree-gallery">
+        <div class="ah_inner-tree-gallery small-12">
             {{> treeGallery}}
         </div>
     </div>
-    <div class="ah_current-folders-gallery">
+    <div class="ah_current-folders-gallery small-9 columns">
         <div class="ah_tools-current-folders-gallery">
 
         </div>
