--- a/webapp/html/layout/header.html
+++ b/webapp/html/layout/header.html
@@ -10,7 +10,7 @@
             <li><a href="#search">search</a></li>
             <li><a href="#gallery">gallery</a></li>
             <li><a href="#settings">settings</a></li>
-            <li><a href="javascript:void(0);" on-click="loadPicture">Load picture</a></li>
+            <li><a href="javascript:void(0);" class="ah_modal-button-header" on-click="loadPicture">Load picture</a></li>
             <li><a href="javascript:void(0);" on-click="logout">Exit</a></li>
         </ul>
     </div>
