--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,400italic,500,500italic,700,700italic,900,900italic,100,100italic,300,300italic);
+@import "header.css";
 *{
     margin:0;
     padding:0;
@@ -6,10 +8,13 @@
 
 html, body{
     height: 100%;
+    background-image: url(../images/bg.jpg);
+    background-size: cover;
 }
 
 #wrapper{
     min-height: 100%;
+    background-color: #ffffff;
 }
 
 #lightbox-container{
