--- a/webapp/css/header.css
+++ b/webapp/css/header.css
@@ -10,7 +10,8 @@
 .ah_brand h1{
     font-size: 35px;
     margin: 0;
-    font-weight: 700;
+    font-weight: 400;
+    font-family:"Oswald";
 }
 
 .ah_brand a{
@@ -20,6 +21,8 @@
 .ah_main-menu{
     height:100%;
     text-align: right;
+    font-weight: 100;
+    font-family: "Ubuntu Condensed";
 }
 
 .ah_simple-search{
@@ -49,20 +52,17 @@
 .ah_inner-main-menu a {
     color: #ffffff;
     font-weight: 700;
-    font-size: 15px;
+    font-size: 18px;
     display: block;
     padding: 7px 0;
     margin: 0 7px;
 }
 
-.ah_inner-main-menu a:hover{
-    text-decoration: underline;
-}
-
 .ah_inner-main-menu a.ah_modal-button-header {
-    background-color: #3a78be;
-    padding: 7px 24px;
+    background-color: #147D6E;
+    padding: 3px 21px 6px;
     margin: 0px 40px;
+    border-radius: 7px;
 }
 
 .ah_inner-main-menu a.ah_modal-button-header:hover{
