--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -1,5 +1,7 @@
+@import url(https://fonts.googleapis.com/css?family=Oswald:400,300,700|Ubuntu+Condensed&subset=latin,cyrillic-ext);
 @import "header.css";
 @import "workspace.css";
+@import "modals.css";
 
 *{
     margin:0;
@@ -9,27 +11,36 @@
 
 html, body{
     height: 100%;
-    background-image: url(../images/bg.jpg);
-    background-size: cover;
 }
 
 #wrapper{
     min-height: 100%;
     background-color: #ffffff;
+    z-index: 1;
+    position: relative;
 }
 
-#lightbox-container{
+#modal-container {
+    background-color: rgba(35, 35, 35, 0.7);
     display: none;
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
 }
 
-#notifications-container{
+#notifications-container {
     display: none;
+    position: absolute;
+    z-index: 3;
 }
 
 #header-container{
     position: relative;
     height: 50px;
-    background: #1f275f;
+    background: #20649E;
 }
 
 #workspace-container{
