--- a/webapp/css/dashboard.css
+++ b/webapp/css/dashboard.css
@@ -5,67 +5,57 @@
     height: 100%;
 }
 
-.ah_top_dashboard{
-    position: relative;
-    height: 250px;
-}
-
-.ah_back {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background-size: contain;
-}
-
-.ah_user-info {
+.ah_top-head-back {
+    background: #2b5994;
+    height: 300px;
+    box-shadow: 0px -2px 4px -2px #232323 inset;
+    z-index: 2;
     position: relative;
 }
 
-.ah_avatar {
-    width: 150px;
-    height: 150px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-color: #d4d4d4;
-    border-radius: 150px;
-    display: inline-block;
-    margin-top: 40px;
-    margin-left: 57px;
-}
-
-p.ah_name {
+.ah_top-head-back h2 {
+    text-align: center;
     color: #ffffff;
-    vertical-align: top;
-    font-size: 45px;
-    margin: 0;
-}
-
-p.ah_city{
-    color: #ffffff;
-    vertical-align: top;
-    font-size: 25px;
-    margin: 0;
-    position: relative;
-    margin-top: -14px;
-}
-
-.ah_inner-user-info{
-    display: inline-block;
-    vertical-align: top;
-    margin-top: 57px;
-    margin-left: 20px;
-}
-
-a.ah_edit-account {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    margin-right: 20px;
-    margin-bottom: 20px;
-    color: #ffffff;
-    font-size: 15px;
-    background-color: #147D6E;
-    padding: 6px 20px;
+    font-size: 83px;
     font-family: Oswald;
-    border-radius: 4px;
+    padding-top: 87px;
+    text-decoration: overline;
+    margin: 0;
+}
+
+.ah_dashboard-columns {
+    padding: 0;
+    border-left: 1px solid #ffffff;
+}
+
+.ah_dashboard-columns:first-child{
+    border:0;
+}
+
+.ah_dashboard-columns h3 {
+    background-color: #20649E;
+    color: #ffffff;
+    text-align: center;
+    font-family: Oswald;
+    margin: 0;
+    padding: 5px 0px;
+}
+
+.ah_picture-item {
+    width: 25%;
+    height: 100px;
+    display: inline-block;
+}
+.ah_img-picture-item {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+}
+
+.ah_img-picture-item small {
+    font-size: 12px;
+    color: #ffffff;
+    background-color: rgba(76, 76, 76, 0.5);
+    padding: 2px 13px;
+    font-weight: 700;
 }
