added sections events and lots

--- a/webapp/html/layout/footer.html
+++ b/webapp/html/layout/footer.html
@@ -1,3 +1,4 @@
 <div class="ah_footer-inner">
-    footer
+    <p>Develop by Sergey Sukhanov</p>
+    <p>ArtHub &copy; 2016. All rights reserved. </p>
 </div>
