--- a/webapp/css/dashboard.css
+++ b/webapp/css/dashboard.css
@@ -7,7 +7,7 @@
 
 .ah_top-head-back {
     background: #2b5994;
-    height: 300px;
+    height: 200px;
     box-shadow: 0px -2px 4px -2px #232323 inset;
     z-index: 2;
     position: relative;
@@ -18,7 +18,7 @@
     color: #ffffff;
     font-size: 83px;
     font-family: Oswald;
-    padding-top: 87px;
+    padding-top: 50px;
     text-decoration: overline;
     margin: 0;
 }
@@ -26,6 +26,7 @@
 .ah_dashboard-columns {
     padding: 0;
     border-left: 1px solid #ffffff;
+    height: 100%;
 }
 
 .ah_dashboard-columns:first-child{
@@ -50,6 +51,11 @@
     width: 100%;
     height: 100%;
     background-size: cover;
+    cursor: pointer;
+}
+
+.ah_img-picture-item:hover{
+
 }
 
 .ah_img-picture-item small {
@@ -58,4 +64,33 @@
     background-color: rgba(76, 76, 76, 0.5);
     padding: 2px 13px;
     font-weight: 700;
+    cursor: pointer;
+}
+
+.ah_people-item {
+    width: 20%;
+    height: 70px;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.ah_img-people-item {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    border-left: 1px solid #2B5994;
+    border-collapse: collapse;
+    border-bottom: 1px solid #2B5994;
+    background-color: #333333;
+}
+
+.ah_img-people-item small{
+    background: #232323;
+    font-size: 12px;
+    color: #FFFFFF;
+    display: none;
+}
+
+.ah_sections-dashboard {
+    height: 348px;
 }
