--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -14,11 +14,12 @@ html, body{
     height: 100%;
 }
 
-#wrapper{
+#wrapper {
     min-height: 100%;
     background-color: #ffffff;
     z-index: 1;
     position: relative;
+    padding-bottom: 50px;
 }
 
 #modal-container {
@@ -54,6 +55,9 @@ html, body{
 #footer-container {
     position: relative;
     z-index: 3;
+    height: 50px;
+    margin-top: -50px;
+    background-color: #20649E;
 }
 
 p.ah_empty {
