--- a/webapp/html/layout/header.html
+++ b/webapp/html/layout/header.html
@@ -13,7 +13,7 @@
             <li><a href="#{{currentUser.id}}">{{currentUser.firstName}} {{currentUser.lastName}}</a></li>
             <li><a href="javascript:void(0);" on-click="logout">Exit</a></li>
             {{else}}
-            <li><a href="#gallery">news</a></li>
+            <li><a href="#news">news</a></li>
             <li><a href="#gallery">gallery</a></li>
             <li><a href="#people">people</a></li>
             <li><a href="#auth">Log in</a></li>
