--- a/webapp/css/account.css
+++ b/webapp/css/account.css
@@ -1,13 +1,9 @@
 .ah_top_dashboard{
     position: relative;
-    height: 250px;
-}
-
-.ah_back {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background-size: contain;
+    height: 200px;
+    background: #2b5994;
+    box-shadow: 0px -2px 4px -2px #404040 inset;
+    z-index: 2;
 }
 
 .ah_user-info {
@@ -19,7 +15,9 @@
 ul.ah_my-menu a {
     color: #ffffff;
     display: block;
-    padding: 10px 0;
+    padding: 5px 0;
+    font-family: Oswald;
+    font-size: 15px;
 }
 
 ul.ah_my-menu a:hover{
@@ -30,7 +28,7 @@ ul.ah_my-menu a.ah_edit-account {
     position: absolute;
     right: 0;
     bottom: 0;
-    margin-right: 20px;
+    margin-right: 26%;
     margin-bottom: 20px;
     color: #ffffff;
     font-size: 15px;
@@ -45,7 +43,7 @@ ul.ah_my-menu {
     display: inline-block;
     position: relative;
     vertical-align: top;
-    height: 100%;
+    height: 99%;
     margin: 0;
     width: 25%;
     background: #20649e;
@@ -62,8 +60,8 @@ ul.ah_my-menu {
     background-color: #d4d4d4;
     border-radius: 150px;
     display: inline-block;
-    margin-top: 40px;
-    margin-left: 57px;
+    margin-top: 25px;
+    margin-left: 20px;
 }
 
 p.ah_name {
@@ -82,10 +80,10 @@ p.ah_city{
     margin-top: -14px;
 }
 
-.ah_inner-user-info{
+.ah_inner-user-info {
     display: inline-block;
     vertical-align: top;
-    margin-top: 57px;
+    margin-top: 38px;
     margin-left: 20px;
 }
 
