--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -3,6 +3,7 @@
 @import "footer.css";
 @import "workspace.css";
 @import "modals.css";
+@import "common.css";
 
 *{
     margin:0;
@@ -14,9 +15,14 @@ html, body{
     height: 100%;
 }
 
+::-webkit-scrollbar {
+    width: 1px;
+    height: 7px;
+}
+
 #wrapper {
     min-height: 100%;
-    background-color: #ffffff;
+    background-color: #20649e;
     z-index: 1;
     position: relative;
     padding-bottom: 50px;
