--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -22,7 +22,7 @@ html, body{
 
 #wrapper {
     min-height: 100%;
-    background-color: #20649e;
+    background-color: #ffffff;
     z-index: 1;
     position: relative;
     padding-bottom: 50px;
@@ -56,6 +56,7 @@ html, body{
 #workspace-container {
     position: relative;
     z-index: 2;
+    overflow: hidden;
 }
 
 #footer-container {
@@ -64,10 +65,5 @@ html, body{
     height: 50px;
     margin-top: -50px;
     background-color: #20649E;
-}
-
-p.ah_empty {
-    font-size: 20px;
-    color: #949494;
-    text-align: center;
+    box-shadow: 0px 0px 4px -1px #232323;
 }
