--- a/webapp/css/auth.css
+++ b/webapp/css/auth.css
@@ -1,16 +1,21 @@
-.ah_auth-inner {
-    height: 100%;
-    background-color: #20649e;
-    padding-top: 10%;
-}
-
 .ah_auth-form {
     width: 50%;
     margin: 0 auto;
     color: #ffffff;
     padding: 50px 40px;
-    background-color: rgb(32, 100, 158);
+    background-color: rgb(31, 82, 125);
     box-shadow: 0px 0px 57px -16px #70a8ff;
+    position: relative;
+    z-index: 2;
+    top: 170px;
+}
+
+.ah_open-gallery {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #28689e;
+    z-index: 1;
 }
 
 .ah_auth-form .ah_col{
