--- a/webapp/css/common.css
+++ b/webapp/css/common.css
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.65);
+    z-index:2;
 }
 
 .preloader img{
@@ -18,4 +19,16 @@ p.ah_empty {
     font-size: 20px;
     color: #949494;
     text-align: center;
+}
+
+.columns.ah_columns{
+    padding:0;
+}
+
+.border-left{
+    border-left:1px solid #284467;
+}
+
+.border-right{
+    border-right:1px solid #284467;
 }
