--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -17,7 +17,6 @@ html, body{
 
 ::-webkit-scrollbar {
     width: 1px;
-    height: 7px;
 }
 
 #wrapper {
@@ -50,20 +49,19 @@ html, body{
     height: 50px;
     background: #20649E;
     z-index: 3;
-    box-shadow: 0px 0px 4px -1px #232323;
+    box-shadow: 0 0 4px -1px #232323;
 }
 
 #workspace-container {
     position: relative;
     z-index: 2;
-    overflow: hidden;
 }
 
 #footer-container {
     position: relative;
-    z-index: 3;
+    z-index: 1;
     height: 50px;
     margin-top: -50px;
     background-color: #20649E;
-    box-shadow: 0px 0px 4px -1px #232323;
+    box-shadow: 0 0 4px -1px #232323;
 }
