--- a/webapp/css/account.css
+++ b/webapp/css/account.css
@@ -103,7 +103,7 @@ a.ah_edit-account {
     display: inline-block;
 }
 
-.ah_inner-account-home h3{
+.ah_inner-account-gallery h3{
     background-color: #20649e;
     margin: 0;
     color: #ffffff;
