--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -45,16 +45,18 @@ html, body{
 }
 
 #header-container {
-    position: relative;
+    position: fixed;
     height: 50px;
     background: #20649E;
     z-index: 3;
     box-shadow: 0 0 4px -1px #232323;
+    width: 100%;
 }
 
 #workspace-container {
     position: relative;
     z-index: 2;
+    padding-top: 50px;
 }
 
 #footer-container {
