--- a/webapp/css/account.css
+++ b/webapp/css/account.css
@@ -178,6 +178,8 @@ a.ah_edit-account {
 .ah_inner-account-home h3{
     font-family: Oswald;
     color: #2B5994;
+    font-size: 24px;
+    text-align: left;
 }
 
 .ah_inner-block{
