--- a/webapp/html/layout/layout.html
+++ b/webapp/html/layout/layout.html
@@ -7,6 +7,7 @@
     <section id="workspace-container">
 
     </section>
+    <a href="javascript:void(0)" on-click="topPage" class="ah_layout-link-top"><i class="fa fa-arrow-circle-up fa-4x" aria-hidden="true"></i></a>
 </div>
 <footer id="footer-container">
 
