--- a/webapp/css/header.css
+++ b/webapp/css/header.css
@@ -49,14 +49,26 @@
     font-weight: 700;
     font-size: 18px;
     display: block;
-    padding: 7px 0;
     margin: 0 7px;
 }
+
+.ah_account-menu a{
+    padding: 7px 0;
+}
+
+.ah_main-menu a{
+    padding: 10px 0 4px;
+}
+
+.ah_main-menu i.fa{
+    margin-right: 6px;
+}
+
 
 .ah_main-menu a.ah_modal-button-header {
     background-color: #147D6E;
     padding: 3px 21px 6px;
-    margin: 0 40px;
+    margin: 0 25px;
     border-radius: 7px;
 }
 
