--- a/webapp/css/modals.css
+++ b/webapp/css/modals.css
@@ -75,3 +75,121 @@
 .ah_inner-show-picture img{
     width:100%;
 }
+
+/*load*/
+
+.ah_drop-area-download {
+    height: 300px;
+    background: #0D2F4C;
+    border: 5px solid #20649E;
+    position: relative;
+}
+
+.ah_load-picture-form label.ah_image-label p, .ah_drop-area-download p{
+    color: #E6E6E6;
+    font-size: 25px;
+    text-align: center;
+    margin:0;
+}
+
+.ah_load-picture-form label.ah_image-label{
+    display: block;
+    width: 200px;
+    background: #20649E;
+    text-align: center;
+    margin: 0 auto;
+    color: #E8E8E8;
+    padding: 8px;
+    font-size: 17px;
+}
+
+.ah_drop-area-download img{
+    height: 100%;
+    display: block;
+    margin: auto;
+    position: relative;
+    z-index: 1;
+}
+
+.ah_drop-area-download-sup {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+}
+
+.ah_drop-area-text {
+    margin-top: 78px;
+}
+
+.ah_drop-area-text .or{
+    font-size: 15px;
+    margin-bottom: 10px;
+}
+
+.ah_load-picture-buttons {
+    margin-top: 30px;
+    text-align: center;
+}
+
+.ah_load-picture-buttons a {
+    margin: 10px 25px;
+    padding: 12px 40px;
+    font-family: Oswald;
+}
+
+.ah_tag-item {
+    padding: 3px 8px 1px 10px;
+    background-color: #20649E;
+    color: #ffffff;
+    display: inline-block;
+    margin: 3px;
+}
+
+.ah_body-tag {
+    display: inline-block;
+    vertical-align: top;
+}
+
+.ah_close-tag {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    margin-left: 5px;
+    margin-top: 2px;
+    cursor: pointer;
+}
+
+.ah_remove-picture {
+    position: absolute;
+    right: 0;
+    width: 22px;
+    height: 22px;
+    background: #20649E;
+    top: 0;
+    margin-right: -27px;
+    color: #ffffff;
+    padding-left: 3px;
+    padding-top: 2px;
+    margin-top: -5px;
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
