--- a/webapp/css/main.css
+++ b/webapp/css/main.css
@@ -3,9 +3,10 @@
 @import "header.css";
 @import "footer.css";
 @import "workspace.css";
-@import "modals.css";
-@import "notifications.css";
-@import "common.css";
+/*@import "modals.css";*/
+/*@import "notifications.css";*/
+/*@import "common.css";*/
+/*@import "tabs.css";*/
 
 *{
     margin:0;
@@ -69,4 +70,22 @@ html, body{
     margin-top: -50px;
     background-color: #20649E;
     box-shadow: 0 0 4px -1px #232323;
+}
+
+.ah_layout-link {
+    position: fixed;
+    width: 56px;
+    height: 64px;
+    color: #ffffff;
+    top: 777px;
+    z-index: 3;
+    right: 0;
+    margin-right: 27px;
+    border-radius: 5px;
+    display: none;
+    background-color: #2b5994;
+}
+
+.ah_layout-link i{
+    color: #f4f4f4;
 }
